jobs/job_60783810/uncert/errors/benchmark_248/solver_2.txt
INFO: Pointer analysis took 0 sec 0 ms
input.cc:34:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
input.cc:50:13: warning: comparison between pointer and integer ('int' and 'void *') [-Wpointer-integer-compare]
  while(ptr != NULL) {
        ~~~ ^  ~~~~
input.cc:51:11: error: indirection requires pointer operand ('long' invalid)
    ptr = *((ptr + skip));
          ^~~~~~~~~~~~~~~
2 warnings and 1 error generated.
yeGYt_Ptr2Arr.c:34:7: warning: incompatible pointer to integer conversion initializing 'int' with an expression of type 'void *' [-Wint-conversion]
  int curr = NULL;
      ^      ~~~~
yeGYt_Ptr2Arr.c:50:13: warning: comparison between pointer and integer ('int' and 'void *')
  while(ptr != NULL) {
        ~~~ ^  ~~~~
yeGYt_Ptr2Arr.c:51:11: error: indirection requires pointer operand ('long' invalid)
    ptr = *((ptr + skip));
          ^~~~~~~~~~~~~~~
2 warnings and 1 error generated.
